// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders property for not selected 1`] = `
<li
  className="movie-nav__item "
>
  <a
    className="movie-nav__link"
    href="#"
    onClick={[Function]}
  >
    Test
  </a>
</li>
`;

exports[`renders property for selected 1`] = `
<li
  className="movie-nav__item movie-nav__item--active"
>
  <a
    className="movie-nav__link"
    href="#"
    onClick={[Function]}
  >
    Test
  </a>
</li>
`;
